# rust_godot_chat_example

./: Cargo.toml
CommunicationWebsocketRust/: ChatUI.tscn  GUI.gd  GUI.tscn  LoginUI.tscn  project.godot
src/: main.rs
