[package]
name = "chat_server"
version = "0.1.0"
authors = ["iona <arthur.blanleuil@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-identity = "0.2.0"
actix-rt = "1.0.0"
actix-web-actors = "2.0.0"

env_logger = "0.7"
